--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,20 @@
 {
-  "extends": "eslint-config-airbnb/base",
+  "extends": "eslint-config-airbnb-base",
   "rules": {
-    "no-console": [0]
+    "no-console": [0],
+    "arrow-parens": [0],
+    "func-names": [0],
+    "prefer-const": [0],
+    "wrap-iife": [0],
+    "array-callback-return": [0],
+    "comma-dangle": [0],
+    "prefer-destructuring": [0],
+    "import/prefer-default-export": [0],
+    "arrow-body-style": [0],
+    "semi": [0]
+  },
+  "env": {
+    "node": true,
+    "jest": true
   }
 }
