test can run but expected not jsx.

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
     "prefer-destructuring": [0],
     "import/prefer-default-export": [0],
     "arrow-body-style": [0],
-    "semi": [0]
+    "semi": [0],
+    "prefer-template": [0]
   },
   "env": {
     "node": true,
