use program judge if import antd Form

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
     "import/prefer-default-export": [0],
     "arrow-body-style": [0],
     "semi": [0],
-    "prefer-template": [0]
+    "prefer-template": [0],
+    "no-param-reassign": [0]
   },
   "env": {
     "node": true,
