--- a/package.json
+++ b/package.json
@@ -31,10 +31,9 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.1.2",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "babel-core": "^7.0.0-0",
     "eslint": "^5.6.0",
@@ -48,7 +47,7 @@
     "README.md"
   ],
   "dependencies": {
-    "@babel/plugin-syntax-jsx": "^7.0.0",
-    "@babel/types": "^7.0.0"
+    "@babel/types": "^7.0.0",
+    "@babel/plugin-syntax-jsx": "^7.0.0"
   }
 }
