--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "README.md"
   ],
   "dependencies": {
-    "@babel/types": "^7.0.0",
-    "@babel/plugin-syntax-jsx": "^7.0.0"
+    "@babel/plugin-syntax-jsx": "^7.0.0",
+    "@babel/types": "^7.1.2"
   }
 }
