has report a babel bug, https://github.com/babel/babel/issues/8819

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,7 +30,7 @@
       "runtimeArgs": [
           "--nolazy",
           "--require",
-          "babel-register"
+          "@babel/register"
       ],
       "env": {
           "NODE_ENV": "development"
