--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
     "arrow-body-style": [0],
     "semi": [0],
     "prefer-template": [0],
-    "no-param-reassign": [0]
+    "no-param-reassign": [0],
+    "linebreak-style": [0]
   },
   "env": {
     "node": true,
