--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "build": "rm -rf lib && babel src --out-dir lib --ignore __tests__",
+    "build": "rm -rf lib && babel src --out-dir lib --ignore test",
     "test": "jest",
     "lint": "eslint --ext .js src",
     "lint:fix": "eslint --ext .js src --fix"
@@ -18,7 +18,8 @@
   ],
   "keywords": [
     "babel-plugin",
-    "antd"
+    "antd",
+    "test-class"
   ],
   "jest": {
     "modulePathIgnorePatterns": [
